# sotarad-subnet

./: env.example  local_sglang.py  pyproject.toml  register.py  requirements.txt  validator.py
data/: results.json
docs/: ARCHITECTURE.md  PROPOSAL.md  TESTNET-GUIDE.md  TESTNET.md
mock/: HOW-TO-HOST-MODEL.md  chutes.py  dataset_api.py  requirements.txt
prompts/: response_parse.py  system_prompt.py
tests/: host_local_sglang.py  test_model_request.py
