[project]
name = "sotarad"
version = "0.1.0"
description = "Radiology pre-screening subnet validator (SotaRad)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "bittensor>=8.0.0",
    "bittensor-cli>=9.17.0",
    "bittensor-wallet>=2.0.0",
    "click>=8.0.0",
]
